fix(config): correct privacy URL in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ company: SQLBI Corp.
 web_url: https://daxlib.org
 
 # Privacy URL - It's added to the website footer
-privacy_url: https://docs.daxlib.org/terms/policy
+privacy_url: https://docs.daxlib.org/terms/privacy
 
 # Terms URL - It's added to the website footer
 terms_url: https://docs.daxlib.org/terms
